# CCC

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  main.h
ccc_server/: CMakeLists.txt  cmake_install.cmake
ccc_server/ccc_server_app/: CCC_server_app  CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
ccc_server/ccc_server_lib/: CMakeLists.txt  Makefile  cmake_install.cmake
ccc_server/ccc_server_lib/include/: listener.hpp  main.h  main.hpp  monitoring.hpp  server.hpp  states.hpp
ccc_server/ccc_server_lib/src/: monitoring.cpp  server.cpp
ccc_server/ccc_server_main/: main.cpp
debian/: CCC_module.service
